--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,24 +1,271 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
-    <title>EyeKids</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>EyeKids</title>
+  <!-- Link to Google Fonts Raleway -->
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      font-family: 'Raleway', sans-serif;
+      font-weight: 600;
+    }
+    footer {
+      display: flex;
+      justify-content: space-around;
+      align-items: flex-start;
+      flex-wrap: wrap;
+      background-color: #f8f9fa;
+      padding: 20px;
+    }
+    footer div {
+      margin: 10px;
+    }
+    footer div h4 {
+      font-size: 1.25em;
+      font-weight: bold;
+    }
+    footer div ul {
+      list-style-type: none;
+      padding: 0;
+      font-size: 0.75em;
+      font-weight: 400;
+    }
+    footer div ul li {
+      margin: 5px 0;
+    }
+    .btn-custom{
+        border-radius: 60px;
+    }
+    .custom-bg-info{
+        background-color: #1F4590;
+    }
+    .custom-text-info{
+        color: #1F4590;
+    }
+    .custom-bg-warning{
+        background-color: #FFA451;
+    }
+    .custom-text-warning{
+        color:#FFA451;
+    }
+    .font-bold {
+      font-weight: 700;
+    }
+    .font-semibold {
+      font-weight: 600;
+    }
+    .font-regular {
+      font-weight: 400;
+    }
+    /* .navbar{
+      height: 10vh;
+      position: fixed;
+      top: 0;
+      z-index: 2;
+      left: 0;
+      width: 100%;
+    }
+    .content{
+        margin-top: 80px;
+    } */
+    .navbar-brand {
+      align-items: baseline;
+    }
+    .centered-button-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  </style>
 </head>
 <body>
-    <!-- Content here -->
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <div class="animated-element">Hello World</div>
-            </div>
-        </div>
+  <!-- Topbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand d-flex " href="#">
+        <h3 class="custom-text-info font-semibold">Eye</h3><p class="custom-text-warning font-semibold">kids</p>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto custom-text-info ">
+        <li class="nav-item mr-3">
+          <a class="nav-link"style="color: #FFA451" href="#home">Home</a>
+        </li>
+        <li class="nav-item mr-3">
+          <a class="nav-link" href="#penyakit">Penyakit</a>
+        </li>
+        <li class="nav-item mr-3">
+          <a class="nav-link" href="#konsultasi">Konsultasi</a>
+        </li>
+        <li class="nav-item mr-3">
+          <a class="nav-link" href="#tips">Tips</a>
+        </li>
+        <li class="nav-item mr-3">
+          <a class="nav-link" href="#contact">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a class="btn custom-bg-warning btn-custom font-semibold text-white" href="/login_user">Login</a>
+        </li>
+      </ul>
     </div>
+  </nav>
+<div class="content">
+  <!-- Hero Section -->
+  <section class="container my-5" id="home">
+    <div class="row">
+      <div class="col-md-6">
+        <h1 class="font-semibold custom-text-info">Waspadai Berbagai Penyakit Mata yang Bisa Dialami</h1>
+          <h4 class="font-semibold custom-text-warning">Si Kecil</h4>
+        <p class="font-regular">Mata adalah indra yang sangat penting bagi tumbuh kembang anak. Bila mengalami sakit mata, si kecil tentunya akan merasa tidak nyaman, bahkan bisa saja mengganggu penglihatannya. Bila dibiarkan, sakit mata pada anak dapat menghambat proses belajar dan aktivitas mereka sehari-hari. Yuk, segera waspadai dan konsultasikan penyakit mata pada disini!.</p>
+      </div>
+      <div class="col-md-6">
+        <img src="static/image/happy-boy.svg" alt="Hero Image" class="img-fluid">
+      </div>
+    </div>
+  </section>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-    <script src="scripts.js"></script>
+  <!-- Gallery Slider -->
+  <section class="container my-5" id="penyakit"> 
+    <div class="d-flex justify-content-between mb-3">
+      <div></div>
+      <div class="text-center">
+        <h4 class="font-semibold custom-text-warning">Jenis Penyakit Mata </h4>
+        <p class="font-regular">Waspadai penyakit mata yang di alami anak</p></div>
+      
+      <div class="text-center" style="align-items: baseline;">
+        <button class="btn btn-secondary btn-custom font-semibold" style="border-color: #1f459061; background-color: #fff; color:  #1f459061; padding-left: 16px; padding-right: 16px;" data-slide="prev" href="#galleryCarousel"> < </button>
+        <button class="btn btn-secondary btn-custom font-semibold" style="background-color: #1F4590; color: #fff; padding-left: 16px; padding-right: 16px;" data-slide="next" href="#galleryCarousel"> > </button>
+      </div>
+    </div>
+    <div id="galleryCarousel" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner h-50">
+        <div class="carousel-item active">
+          <div class="d-flex justify-content-between">
+            <img src="static/image/penyakit_mata_1.svg" class="d-block w-25 pr-3" alt="Slide 1">
+            <img src="static/image/penyakit_mata_2.svg" class="d-block w-25 pr-3" alt="Slide 2">
+            <img src="static/image/penyakit_mata_3.svg" class="d-block w-25 pr-3" alt="Slide 3">
+            <img src="static/image/penyakit_mata_4.svg" class="d-block w-25" alt="Slide 4">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="d-flex justify-content">
+            <img src="static/image/penyakit_mata_4.svg" class="d-block w-25 pr-3" alt="Slide 4">
+            <img src="static/image/penyakit_mata_1.svg" class="d-block w-25 pr-3" alt="Slide 1">
+            <img src="static/image/penyakit_mata_2.svg" class="d-block w-25 pr-3" alt="Slide 2">
+            <img src="static/image/penyakit_mata_3.svg" class="d-block w-25" alt="Slide 3">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="d-flex justify-content">
+            <img src="static/image/penyakit_mata_1.svg" class="d-block w-25 pr-3" alt="Slide 1">
+            <img src="static/image/penyakit_mata_3.svg" class="d-block w-25 pr-3" alt="Slide 3">
+            <img src="static/image/penyakit_mata_2.svg" class="d-block w-25 pr-3" alt="Slide 2">
+            <img src="static/image/penyakit_mata_4.svg" class="d-block w-25" alt="Slide 4">
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#galleryCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#galleryCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </section>
+
+  <!-- Call to Action Section -->
+  <section class="container my-5" id="konsultasi">
+    <div class="card-body custom-bg-info text-white card pr-0 pl-0">
+      
+      <div class="row d-flex justify-content-between  pr-0 pl-0 mr-4 ml-4">
+      <div class="col-md-8">
+        <h2 style="font-weight: 800;">Konsultasikan</h2>
+        <a href="#" class="btn text-white mb-2" style="background-color: #ffffff2a;">penyakit mata anak</a><br>
+        <a href="/login_user" class="text-white">disini !!</a>
+      </div><br>
+      <div class="col-md-4 centered-button-container" >
+        <button onclick="document.location.href='/login_user'" class="btn btn-custom mt-0 mb-0 pt-0 pb-0 custom-bg-warning text-white h-50 w-100 mb-3 mt-3 ">
+          <h4 class="font-semibold" style="margin-bottom: 0px;">konsultasi</h4>
+        </button>
+      </div>
+      </div>
+  </div>
+  </section>
+
+  <!-- Description Section -->
+  <section class="container my-5" id="tips">
+    <div class="row">
+      <div class="col-md-6 pb-2">
+        <img src="static/image/bg_tips.svg" alt="Information Image" class="img-fluid">
+      </div>
+      <div class="col-md-6">
+        <p class="custom-text-warning font-semibold">Tips Kesehatan</p>
+        <h2 class="font-semibold">Tips Menjaga Kesehatan Mata
+          dan Penglihatan Anak</h2>
+        <p class="font-regular">Kesehatan mata anak perlu dijaga sejak dini.
+          Caranya dengan memenuhi nutrisi anak dan menstimulasi pandangannya.</p>
+        <a onclick="document.location.href='/tips'" class="btn text-white btn-custom custom-bg-warning">Pelajari Lebih Lanjut</a>
+      </div>
+     
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="text-center" id="contact">
+    <div>
+      <a class="navbar-brand d-flex " href="#">
+        <h3 class="custom-text-info font-semibold">Eye</h3><p class="custom-text-warning font-semibold">kids</p>
+    </a>
+    <p class="font-regular">menjaga sepenuh hati kesehatan mata anak.</p>
+    </div>
+    <div>
+      <h4>About</h4>
+      <ul>
+        <li>About us</li>
+        <li>Features</li>
+        <li>News</li>
+        <li>Menu</li>
+      </ul>
+    </div>
+    
+    <div>
+      <h4>Company</h4>
+      <ul>
+        <li>Why</li>
+        <li>Partners with us</li>
+        <li>FAQ</li>
+        <li>Blogs</li>
+      </ul>
+    </div>
+    <div>
+      <h4>Support</h4>
+      <ul>
+        <li>Account</li>
+        <li>Support center</li>
+        <li>Feedback</li>
+        <li>Contact us</li>
+        <li>Accessbility</li>
+      </ul>
+    </div>
+    <div>
+      <h4>Get in touch</h4>
+      <ul>
+        <li>Questions or Feedback</li>
+      </ul>
+    </div>
+  </footer>
+</div>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
