--- a/app/templates/user/dashboard.html
+++ b/app/templates/user/dashboard.html
@@ -1,24 +1,261 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
-    <title>EyeKids</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>EyeKids</title>
+  <!-- Link to Google Fonts Raleway -->
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      min-height: 100vh;
+      font-family: 'Raleway', sans-serif;
+      font-weight: 600;
+    }
+    .navbar{
+      height: 10vh;
+      position: fixed;
+      top: 0;
+      z-index: 2;
+      left: 0;
+      width: 250px;
+      background-color: #f8f9fa00;
+    }
+    .sidebar {
+      height: 100vh;
+      position: fixed;
+      top: 65px;
+      left: 0;
+      width: 250px; 
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      background-color: #f8f9fa;
+      border-right: 2px solid #ddd; 
+      transition: transform 0.3s ease;
+      padding: 20px; /* Tambahkan padding untuk memberikan ruang di dalam sidebar */
+    }
+
+    .sidebar .content {
+      flex-grow: 1;
+    }
+    .sidebar.collapsed {
+      transform: translateX(-100%);
+    }
+    .sidebar .nav-link {
+      color: #000;
+    }
+    .sidebar .nav-link:hover {
+      background-color: #e9ecef;
+    }  
+    .sidebar .social-icons {
+      height: 100px;
+      margin-top: auto; /* Mengatur ikon-ikon sosial untuk muncul di bagian paling bawah */
+      text-align: center; /* Untuk menengahkan ikon-ikon sosial */
+    }
+    .content {
+      margin-left: 250px;
+      padding: 20px;
+      transition: margin-left 0.3s ease;
+    }
+    .width-mobile{
+        width: 100%;
+    }
+    .width-desktop{
+        width: calc(100% - 250px);
+    }
+    .content.collapsed {
+      margin-left: 0;
+      width: 100%;
+    }
+    .btn-custom {
+        border-radius: 60px;
+    }
+    .custom-bg-info {
+        background-color: #1F4590;
+    }
+    .custom-text-info {
+        color: #1F4590;
+    }
+    .custom-bg-warning {
+        background-color: #FFA451;
+    }
+    .custom-text-warning {
+        color: #FFA451;
+    }
+    .font-bold {
+      font-weight: 700;
+    }
+    .font-semibold {
+      font-weight: 600;
+    }
+    .font-regular {
+      font-weight: 400;
+    }
+    .toggle-btn {
+      cursor: pointer;
+    }
+    .baseline {
+      align-items: baseline;
+    }
+    .custom-border-size {
+    height: 4px; /* Ketebalan garis diatur di sini */
+    border: none; /* Menghapus border default */
+    background-color: #1F4590;/* Warna garis */
+  }
+  .nav-link{
+    color: #ffa451 !important;;
+  }
+  </style>
 </head>
 <body>
-    <!-- Content here -->
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <div class="animated-element">Hello World</div>
-            </div>
+       <!-- Topbar -->
+   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="d-flex baseline">
+        <a class="navbar-brand d-flex baseline" href="#">
+            <h3 class="custom-text-info font-semibold">Eye</h3><p class="custom-text-warning font-semibold">kids</p>
+        </a>
+        <!-- Toggle Button -->
+        <div class="toggle-btn">
+            <button id="sidebarToggle" class="btn btn-secondary">☰</button>
         </div>
     </div>
+    <div></div>
+    <div></div>
+  </nav>
+  <!-- Sidebar -->
+  <nav class="sidebar bg-light p-2" >
+    <div class="text-center">
+    <img src="../static/icon/profile_default.svg" alt="icon_profile_Default">
+    <p class="font-semibold custom-text-warning">Nama</p>
+    <hr class=" custom-bg-info custom-border-size btn-custom" >
+    </div>
+    <ul class="nav flex-column text-start pl-3">
+      <li class="nav-item">
+        <a class="nav-link " href="/user/dashboard"><img src="../static/icon/jadwal.svg" height="25" width="25" alt="icon_dashboard">  Dashboard</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="/user/profile"><img src="../static/icon/icon_profile.svg" height="25" width="25" alt="icon_username">  Profile</a>
+      </li>
+    </ul>
+    <div>
+    <hr class=" custom-bg-info custom-border-size btn-custom" >
+    </div>
+    <ul class="nav flex-column text-start pl-3">
+      <li class="nav-item">
+        <a class="nav-link " href="/ganti_password"><img src="../static/icon/ganti_password.svg" height="25" width="25" alt="icon_ganti_password">  Ganti Password</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="/keluar"><img src="../static/icon/logout.svg" height="25" width="25" alt="icon_keluar">  Keluar</a>
+      </li>
+    </ul>
+    <div>
+    <hr class=" custom-bg-info custom-border-size btn-custom" >
+    </div>
+    <div class="text-center social-icons">
+        <a href=""class="mr-3"><img src="../static/icon/twitter.svg" height="25" width="25" alt=""></a> 
+        <a href=""class="mr-3"><img src="../static/icon/instagram.svg" height="25" width="25" alt=""></a>
+        <a href=""><img src="../static/icon/whatsapp.svg" height="25" width="25" alt=""></a>
+    </div>
+  </nav>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-    <script src="scripts.js"></script>
+  
+
+  <!-- Content -->
+  <div class="content" id="mainContent">
+    <!-- Hero Section -->
+    <section class="container my-5" id="home">
+      <div class="row">
+        <div class="col-md-6 mb-3 text-center">
+        <img src="../static/icon/upload_gambar.svg" class="img-responsive img" alt="icon_upload_gambar">
+        <p class="font-semibold mt-1">upload gambar mata anak </p>
+        <input id="FormGambar" name="file" type="file" accept="image/*" class="btn btn-custom custom-bg-warning w-100 font-semibold text-white"/>
+        </div>
+        <div class="col-md-6 mb-3 text-center">
+          <img src="../static/icon/hasil_diagnosa.svg" class="img-responsive img" alt="icon_cek_hasil">
+          <p class="font-semibold mt-1">Hasil Diagnosa </p>
+          <button type="button" id="cek_hasil" class="btn btn-custom custom-bg-warning w-100 text-white font-semibold" style="height: 42.8px;">Lihat Hasil</button>
+        </div>
+        <div class="col-md-12 mb-3 text-center">
+          <img src="../static/icon/upload_kamera.svg" class="img-responsive img" alt="icon_upload_camera">
+          <p class="font-semibold mt-1">foto mata anak</p>
+          <input type="file" name="upload_camera" id="upload_camera" class="btn font-semibold text-white btn-custom custom-bg-warning w-100">  
+        </div>
+      </div>
+    </section>
+  </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script>
+    $(document).ready(function () {
+    function adjustContentStyle() {
+        const content = $('.content');
+      const sidebar = document.querySelector('.sidebar');
+      const sidebarWidth = 250; // Width of the sidebar in pixels
+
+      if ($(window).width() >= 500) {
+        // Desktop view
+      content.addClass('width-desktop').removeClass('width-mobile');
+      }else {
+        // Mobile view
+      content.addClass('width-mobile').removeClass('width-desktop');
+      }
+    }
+
+    // Adjust styles on page load
+
+    adjustContentStyle();
+    // Adjust styles on window resize
+    window.addEventListener('resize', adjustContentStyle);
+      $('#sidebarToggle').on('click', function () {
+        $('.sidebar').toggleClass('collapsed');
+        $('#mainContent').toggleClass('collapsed');
+        adjustContentStyle();
+      });
+    });
+    $("#cek_hasil").on("click", function () {
+        $("#cek_hasil").html("Loading...")
+        let formData = new FormData();
+        jQuery.each(jQuery('#FormGambar')[0].files, function (i, file) {
+          formData.append('gambar', file);
+        });
+        $.ajax({
+          url: "/predict",
+          data: formData,
+          cache: false,
+          contentType: false,
+          processData: false,
+          method: 'POST',
+          type: 'POST',
+        //   headers: {
+        //     'Authorization': 'Bearer ' + token
+        // },
+        }).done(function (data) {
+          console.log(data);
+          try {
+              if (data.msg === "SUKSES") {
+                  alert("Status : Sukses ");
+                  var img_path = "/static/upload/"+data.img
+                  $("#img_placeholder").attr('src',img_path)
+                  $("#img_placeholder").show()
+                  $("#ke_chatbot").show()
+                  $("#hasil_deteksi").html("<p>Terdeteksi:</p><h2 color='green'>"+data.hasil+"</h2>")
+                  $("#kirim").html("kirim")
+              } else {
+                  alert("Status: "+data.msg);
+                  window.location.href = "/skin_detection";
+              }
+          } catch (error) {
+              console.log(error);
+              alert("Error: " + error);
+              window.location.href = "/skin_detection";
+          }
+        });
+        event.preventDefault();
+      });
+  </script>
 </body>
 </html>
