--- a/app/templates/admin/login.html
+++ b/app/templates/admin/login.html
@@ -1,3 +1,9 @@
+{% if session['jwt_token'] %}
+    <!-- Jika jwt_token tidak ada -->
+    <script>
+        window.location.href = "/admin/dashboard";
+    </script>
+{% else %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -59,13 +65,31 @@
 
   <!-- Call to Action Section -->
   <section class="container my-5">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+        <div style="
+        position: fixed;
+        top: 0;
+        right: 0;
+        z-index: 9999;" 
+        class="mt-3 mr-2 alert alert-success alert-dismissible bg-success text-white border-0 fade show"
+        role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        {{ messages[0] }}
+    </div>
+            
+    {% endif %}
+    {% endwith %}
     <div class="card custom-bg-info border-medium" style="border-radius: 20px;">
         <div class="card-body text-center ">
             <h1 class="font-semibold custom-text-warning"> Login Admin</h1>
-            <form class="form text-center" id="form-now">
+            <form class="form text-center" action="none" id="form-now">
+                <p class="font-semibold text-danger" id="msg">username / password salah</p>	
                 <input class="btn bg-white mt-3 mb-3 text-center col-md-6 font-semibold font-regular" type="text" name="username" id="username"><br>
-                <input class="btn bg-white mt-3 mb-3 text-center col-md-6 font-semibold font-regular" type="password" name="password"><br>
-                <button onclick="" class="col-md-6 mt-3 mb-3 btn btn-custom custom-bg-warning text-white">
+                <input class="btn bg-white mt-3 mb-3 text-center col-md-6 font-semibold font-regular" type="password" name="password" id="password"><br>
+                <button type="button" id="login" class="col-md-6 mt-3 mb-3 btn btn-custom custom-bg-warning text-white">
                 <h4 class="font-semibold" style="margin-bottom: 0px;">Login</h4>
                 </button>
             </form>
@@ -73,8 +97,42 @@
     </div>
   </section>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script>    
+  document.getElementById("msg").style.display = "none";
+    function saveTokenToLocalStorage(token) {
+        localStorage.setItem('jwt_token', token);
+    }
+    function kirim(){
+        $.ajax({
+            url: '/login_admin/proses',
+            method: 'POST',
+            contentType: 'application/json',
+            data: JSON.stringify({
+                username:document.getElementById("username").value,
+                password:document.getElementById("password").value
+            }),
+            success: function(response) {
+                // Proses respons dari server
+                console.log(response);
+                if(response=="username salah"){
+                    document.getElementById("msg").innerHTMl = response
+                    document.getElementById("msg").style.display = "block";
+                }
+                else if(response=="password salah"){
+                    document.getElementById("msg").innerHTMl = response
+                    document.getElementById("msg").style.display = "block";
+                }
+                else{
+                    saveTokenToLocalStorage(response);
+                    window.location.href = '/admin/dashboard'
+                }
+            }
+        });
+    }
+    document.getElementById("login").addEventListener("click", kirim);</script>
 </body>
 </html>
+{% endif %}
