--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -126,7 +126,7 @@
         <p class="font-regular">Mata adalah indra yang sangat penting bagi tumbuh kembang anak. Bila mengalami sakit mata, si kecil tentunya akan merasa tidak nyaman, bahkan bisa saja mengganggu penglihatannya. Bila dibiarkan, sakit mata pada anak dapat menghambat proses belajar dan aktivitas mereka sehari-hari. Yuk, segera waspadai dan konsultasikan penyakit mata pada disini!.</p>
       </div>
       <div class="col-md-6">
-        <img src="static/image/happy-boy.svg" alt="Hero Image" class="img-fluid">
+        <img src="E:/joki_2/app/static/image/happy-boy.svg" alt="Hero Image" class="img-fluid">
       </div>
     </div>
   </section>
