--- a/app/templates/user/dashboard.html
+++ b/app/templates/user/dashboard.html
@@ -129,7 +129,7 @@
   <nav class="sidebar bg-light p-2" >
     <div class="text-center">
     <img src="../static/icon/profile_default.svg" alt="icon_profile_Default">
-    <p class="font-semibold custom-text-warning">{{ session['username'] }}</p>
+    <p class="font-semibold custom-text-warning">{{ session['nama_lengkap'] }}</p>
     <hr class=" custom-bg-info custom-border-size btn-custom" >
     </div>
     <ul class="nav flex-column text-start pl-3">
