--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -9,101 +9,62 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EyeKids</title>
-  <!-- Link to Google Fonts Raleway -->
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-      font-family: 'Raleway', sans-serif;
-      font-weight: 600;
-    }
-    .btn-custom{
-        border-radius: 60px;
-    }
-    .custom-bg-info{
-        background-color: #1F4590;
-    }
-    .custom-text-info{
-        color: #1F4590;
-    }
-    .custom-bg-warning{
-        background-color: #FFA451;
-    }
-    .custom-text-warning{
-        color:#FFA451;
-    }
-    .font-bold {
-      font-weight: 700;
-    }
-    .font-semibold {
-      font-weight: 600;
-    }
-    .font-regular {
-      font-weight: 400;
-    }
-    .navbar-brand {
-      align-items: baseline;
-    }
-    .border-medium{
-        border-radius: 10px;
-    }
-  </style>
+  <title>Membuat Form Login</title>
+  <link rel="stylesheet" href="/static/login__register_user/style.css">
 </head>
 <body>
-   <!-- Topbar -->
-   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand d-flex " href="#">
-        <h3 class="custom-text-info font-semibold">Eye</h3><p class="custom-text-warning font-semibold">kids</p>
-    </a>
-    <div></div>
-    <div></div>
-  </nav>
-
-  <!-- Call to Action Section -->
-  <section class="container my-5">
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-        <div style="
-        position: fixed;
-        top: 0;
-        right: 0;
-        z-index: 9999;" 
-        class="mt-3 mr-2 alert alert-success alert-dismissible fade show"
-        role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        {{ messages[0] }}
-    </div>
-    {% endif %}
-    {% endwith %}
-    
-    <div class="card custom-bg-info border-medium" style="border-radius: 20px;">
-        <div class="card-body text-center ">
-            <h1 class="font-semibold custom-text-warning"> Login</h1>
-            <div class="btn bg-white mt-3 mb-3 border-medium col-md-6" id="header">
-                <a class="btn font-semibold custom-text-info border-medium">Login</a>
-                <a class="btn font-semibold custom-text-info border-medium">Daftar</a>    
-            </div><br>
-            <form class="form text-center" id="form-login">
-                <p class="font-semibold text-danger" id="msg">username / password salah</p>		
-                <input class="btn bg-white mt-3 mb-3 text-center col-md-6 font-semibold font-regular" type="text" name="username" id="username"><br>
-                <input class="btn bg-white mt-3 mb-3 text-center col-md-6 font-semibold font-regular" type="password" name="password" id="password"><br>
-                <button type="button" id="login" class="col-md-6 mt-3 mb-3 btn btn-custom custom-bg-warning text-white">
-                <h4 class="font-semibold" style="margin-bottom: 0px;">Login</h4>
-                </button>
-            </form>
-            <div class="mt-3 mb-3 border-medium" id="">
-                <a class="font-semibold custom-text-warning" style="text-decoration: none;">Belum punya akun? </a>
-                <a class="font-semibold text-white"> Daftar sekarang</a>    
-            </div><br>
+<div class="wrapper">
+      <div class="title-text">
+        <div class="title login">Login</div>
+        <div class="title signup">Registrasi</div>
+      </div>
+      <div class="form-container">
+        <div class="slide-controls">
+          <input type="radio" name="slide" id="login" checked>
+          <input type="radio" name="slide" id="signup">
+          <label for="login" class="slide login">Login</label>
+          <label for="signup" class="slide signup">Daftar</label>
+          <div class="slider-tab"></div>
         </div>
+        <div class="form-inner">
+          <form action="#" class="login">
+            <pre>
+            </pre>
+            <div class="field">
+              <input type="text" placeholder="Masukan Email " required>
+            </div>
+            <div class="field">
+              <input type="password" placeholder="Masukan Password" required>
+            </div>
+            <div class="field btn">
+              <div class="btn-layer"></div>
+              <input id="login" type="button" value="Login">
+            </div>
+            <div class="signup-link">Buat akun <a href="">Daftar sekarang</a></div>
+          </form>
+          <form action="#" class="signup">
+            <div class="field">
+              <input type="text" placeholder="Masukan Nama" required>
+            </div>
+            <div class="field">
+              <input type="text" placeholder="Masukan Email" required>
+            </div>
+            <div class="field">
+              <input type="password" placeholder="Masukan Password" required>
+            </div>
+            <div class="field">
+              <input type="password" placeholder="Ulangi password" required>
+            </div>
+            <div class="field btn">
+              <div class="btn-layer"></div>
+              <input id="daftar" type="button" value="Daftar">
+            </div>
+            <div class="signup-link">Sudah punya akun? <a href="">Login</a></div>
+          </form>
+        </div>
+      </div>
     </div>
-  </section>
+  <script  src="/static/login__register_user/script.js"></script>
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
@@ -113,9 +74,15 @@
     function saveTokenToLocalStorage(token) {
         localStorage.setItem('jwt_token', token);
     }
-    function kirim(){
+    function kirim_login(pilihan){
+        if (pilihan==="login"){
+            var uri = "/login_user/proses";
+        }
+        else{
+            var uri = "/bikin_akun_user";
+        }
         $.ajax({
-            url: '/login_user/proses',
+            url: uri,
             method: 'POST',
             contentType: 'application/json',
             data: JSON.stringify({
@@ -125,7 +92,7 @@
             success: function(response) {
                 // Proses respons dari server
                 console.log(response);
-                if(response=="username salah" || response=="password salah"){
+                if(response=="Username and password are required" || response=="Username already exists"){
                     document.getElementById("msg").innerText = response;
                     document.getElementById("msg").style.display = "block";
                 } else {
@@ -133,9 +100,12 @@
                     window.location.href = '/user/dashboard';
                 }
             }
-        });
-    }
-    document.getElementById("login").addEventListener("click", kirim);
+        })
+
+        };
+    
+    document.getElementById("login").addEventListener("click", kirim("login"));
+    document.getElementById("daftar").addEventListener("click", kirim("register"));
   </script>
 </body>
 </html>
