--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -126,7 +126,7 @@
         <p class="font-regular">Mata adalah indra yang sangat penting bagi tumbuh kembang anak. Bila mengalami sakit mata, si kecil tentunya akan merasa tidak nyaman, bahkan bisa saja mengganggu penglihatannya. Bila dibiarkan, sakit mata pada anak dapat menghambat proses belajar dan aktivitas mereka sehari-hari. Yuk, segera waspadai dan konsultasikan penyakit mata pada disini!.</p>
       </div>
       <div class="col-md-6">
-        <img src="E:/joki_2/app/static/image/happy-boy.svg" alt="Hero Image" class="img-fluid">
+        <img src="./static/image/happy-boy.svg" alt="Hero Image" class="img-fluid">
       </div>
     </div>
   </section>
@@ -148,26 +148,26 @@
       <div class="carousel-inner h-50">
         <div class="carousel-item active">
           <div class="d-flex justify-content-between">
-            <img src="static/image/penyakit_mata_1.svg" class="d-block w-25 pr-3" alt="Slide 1">
-            <img src="static/image/penyakit_mata_2.svg" class="d-block w-25 pr-3" alt="Slide 2">
-            <img src="static/image/penyakit_mata_3.svg" class="d-block w-25 pr-3" alt="Slide 3">
-            <img src="static/image/penyakit_mata_4.svg" class="d-block w-25" alt="Slide 4">
+            <img src="./static/image/penyakit_mata_1.svg" class="d-block w-25 pr-3" alt="Slide 1">
+            <img src="./static/image/penyakit_mata_2.svg" class="d-block w-25 pr-3" alt="Slide 2">
+            <img src="./static/image/penyakit_mata_3.svg" class="d-block w-25 pr-3" alt="Slide 3">
+            <img src="./static/image/penyakit_mata_4.svg" class="d-block w-25" alt="Slide 4">
           </div>
         </div>
         <div class="carousel-item">
           <div class="d-flex justify-content">
-            <img src="static/image/penyakit_mata_4.svg" class="d-block w-25 pr-3" alt="Slide 4">
-            <img src="static/image/penyakit_mata_1.svg" class="d-block w-25 pr-3" alt="Slide 1">
-            <img src="static/image/penyakit_mata_2.svg" class="d-block w-25 pr-3" alt="Slide 2">
-            <img src="static/image/penyakit_mata_3.svg" class="d-block w-25" alt="Slide 3">
+            <img src="./static/image/penyakit_mata_4.svg" class="d-block w-25 pr-3" alt="Slide 4">
+            <img src="./static/image/penyakit_mata_1.svg" class="d-block w-25 pr-3" alt="Slide 1">
+            <img src="./static/image/penyakit_mata_2.svg" class="d-block w-25 pr-3" alt="Slide 2">
+            <img src="./static/image/penyakit_mata_3.svg" class="d-block w-25" alt="Slide 3">
           </div>
         </div>
         <div class="carousel-item">
           <div class="d-flex justify-content">
-            <img src="static/image/penyakit_mata_1.svg" class="d-block w-25 pr-3" alt="Slide 1">
-            <img src="static/image/penyakit_mata_3.svg" class="d-block w-25 pr-3" alt="Slide 3">
-            <img src="static/image/penyakit_mata_2.svg" class="d-block w-25 pr-3" alt="Slide 2">
-            <img src="static/image/penyakit_mata_4.svg" class="d-block w-25" alt="Slide 4">
+            <img src="./static/image/penyakit_mata_1.svg" class="d-block w-25 pr-3" alt="Slide 1">
+            <img src="./static/image/penyakit_mata_3.svg" class="d-block w-25 pr-3" alt="Slide 3">
+            <img src="./static/image/penyakit_mata_2.svg" class="d-block w-25 pr-3" alt="Slide 2">
+            <img src="./static/image/penyakit_mata_4.svg" class="d-block w-25" alt="Slide 4">
           </div>
         </div>
       </div>
@@ -205,7 +205,7 @@
   <section class="container my-5" id="tips">
     <div class="row">
       <div class="col-md-6 pb-2">
-        <img src="static/image/bg_tips.svg" alt="Information Image" class="img-fluid">
+        <img src="./static/image/bg_tips.svg" alt="Information Image" class="img-fluid">
       </div>
       <div class="col-md-6">
         <p class="custom-text-warning font-semibold">Tips Kesehatan</p>
