--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -111,7 +111,8 @@
           <a class="nav-link" href="#contact">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="btn custom-bg-warning btn-custom font-semibold text-white" href="/login_user">Login</a>
+          <a class="btn custom-bg-warning btn-custom font-semibold text-white" href="/login_user">Login</a> 
+          <a class="btn custom-bg-warning btn-custom font-semibold text-white" href="/login_admin">Login Admin</a>
         </li>
       </ul>
     </div>
