--- a/app/templates/admin/history_konsultasi.html
+++ b/app/templates/admin/history_konsultasi.html
@@ -192,6 +192,7 @@
                 </tr>
               </thead>
               <tbody>
+                {% for i in history_record %}
                 <tr>
                   <td>John Doe</td>
                   <td>Jane Doe</td>
@@ -199,9 +200,10 @@
                   <td>12-06-2024</td>
                   <td>Sehat</td>
                   <td>
-                    <button class="btn btn-info btn-sm">Detail</button>
+                    <button class="btn btn-info btn-sm" onclick="window.open('/admin/history_konsultasi/{{ i.id }}', '_blank');">Detail</button>
                     <button class="btn btn-danger btn-sm">Hapus</button>
                   </td>
+                  {% endfor %}
                 </tr>
                 <!-- Tambahkan baris data lain di sini -->
               </tbody>
