--- a/app/templates/admin/login.html
+++ b/app/templates/admin/login.html
@@ -56,7 +56,7 @@
 <body>
    <!-- Topbar -->
    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand d-flex " href="#">
+    <a class="navbar-brand d-flex " href="/">
         <h3 class="custom-text-info font-semibold">Eye</h3><p class="custom-text-warning font-semibold">kids</p>
     </a>
     <div></div>
