--- a/app/templates/user/hasil_diagnosa.html
+++ b/app/templates/user/hasil_diagnosa.html
@@ -56,15 +56,15 @@
   </nav>
 
   <!-- Call to Action Section -->
-  <section class="container my-5">
+  <section class="container my-5 border-medium custom-bg-info text-white pb-3">
     <div class="row">
-      <div class="col-md-12 text-center mb-3">
-        <h1 class="font-bold custom-text-info">Hasil Diagnosa</h1>
+      <div class="col-md-12 text-center mb-3 mt-3">
+        <h1 class="font-bold ">Hasil Diagnosa</h1>
       </div>
         <div class="col-md-4">
           
             <img src="/static/detect/{{ diagnosa.file_deteksi }}" class="w-100" alt="hasil konsultasi">
-            <h4 class="font-semibold custom-text-info mt-2" id="hasil_predict">
+            <h4 class="font-semibold  mt-2" id="hasil_predict">
               {% for penyakit, jumlah in diagnosa.hasil_diagnosa.items() %}
               <li>{{ penyakit }}</li>
           {% endfor %}
@@ -76,18 +76,21 @@
             <h5 class="font-semibold"><li>{{ penyakit }}</li></h5>
             {% if penyakit in diagnosa.rekomendasi_diagnosa %}
                 <p class="font-semibold">{{ diagnosa.rekomendasi_diagnosa[penyakit].pengobatan }}</p>
-                <a class="btn btn-custom custom-bg-warning custom-text-info font-semibold" href="{{ diagnosa.rekomendasi_diagnosa[penyakit].link_rekomendasi }}">rekomendasi</a>
+                <a class="btn btn-custom custom-bg-warning  font-semibold" href="{{ diagnosa.rekomendasi_diagnosa[penyakit].link_rekomendasi }}">rekomendasi</a>
             {% endif %}
         {% endfor %}
         <br>
         </div>
-        <div class="col-md-12 text-end">
-          <p><a href="/user/dashboard">back</a></p>
-          
-          </div>
     </div>
+    
   </section>
-
+  <section class="container my-5">
+  <div class="row">
+    <div class="col-md-12 text-end">
+      <p><a href="/user/dashboard">back</a></p>
+    </div>
+  </div>
+  </section>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
