--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -9,10 +9,53 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Membuat Form Login</title>
+  <title>Login</title>
   <link rel="stylesheet" href="/static/login_register_user/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .btn-custom{
+        border-radius: 60px;
+    }
+    .custom-bg-info{
+        background-color: #1F4590;
+    }
+    .custom-text-info{
+        color: #1F4590;
+    }
+    .custom-bg-warning{
+        background-color: #FFA451;
+    }
+    .custom-text-warning{
+        color:#FFA451;
+    }
+    .font-bold {
+      font-weight: 700;
+    }
+    .font-semibold {
+      font-weight: 600;
+    }
+    .font-regular {
+      font-weight: 400;
+    }
+    .navbar-brand {
+      align-items: baseline;
+    }
+    .border-medium{
+        border-radius: 10px;
+    }
+  </style>
 </head>
 <body>
+     <!-- Topbar -->
+     <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand d-flex " href="/">
+          <h3 class="custom-text-info font-semibold">Eye</h3><p class="custom-text-warning font-semibold">kids</p>
+      </a>
+      <div></div>
+      <div></div>
+    </nav>
+  
 <div class="wrapper">
       <div class="title-text">
         <div class="title login">Login</div>
