--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -170,23 +170,22 @@
   <div class="content" id="mainContent">
     <!-- Hero Section -->
     <section class="container my-5" id="home">
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            <div style="
-            position: fixed;
-            top: 0;
-            right: 0;
-            z-index: 9999;" 
-            class="mt-3 mr-2 alert alert-success alert-dismissible bg-success text-white border-0 fade show"
-            role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            {{ messages[0] }}
+      {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <div id="flashMessage" style="
+          position: fixed;
+          top: 0;
+          right: 0;
+          z-index: 9999;"
+          class="mt-3 mr-2 alert alert-success alert-dismissible bg-success text-white border-0 fade show"
+          role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          {{ messages[0] }}
         </div>
-                
-        {% endif %}
-        {% endwith %}
+      {% endif %}
+    {% endwith %}
       <div class="row">
         <div class="col-md-6 mb-3 text-center">
         <img src="../static/icon/history_konsultasi.svg" class="img-responsive img" alt="icon_upload_gambar">
@@ -232,7 +231,13 @@
       });
     });
    
-  </script>
+  </script>    
+  <script>
+      // Hide the flash message after 1 second
+      setTimeout(function() {
+        $('#flashMessage').fadeOut('fast');
+      }, 1000); // Adjust the timeout value as needed
+    </script>
 </body>
 </html>
 {% else %}
