--- a/app/templates/admin/history_konsultasi.html
+++ b/app/templates/admin/history_konsultasi.html
@@ -123,7 +123,7 @@
   <!-- Topbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="d-flex baseline">
-      <a class="navbar-brand d-flex baseline" href="#">
+      <a class="navbar-brand d-flex baseline" href="/admin/dashboard">
         <h3 class="custom-text-info font-semibold">Eye</h3><p class="custom-text-warning font-semibold">kids</p>
       </a>
       <!-- Toggle Button -->
