--- a/app/templates/admin/register.html
+++ b/app/templates/admin/register.html
@@ -50,7 +50,7 @@
 <body>
    <!-- Topbar -->
    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand d-flex " href="#">
+    <a class="navbar-brand d-flex " href="/">
         <h3 class="custom-text-info font-semibold">Eye</h3><p class="custom-text-warning font-semibold">kids</p>
     </a>
     <div></div>
@@ -59,6 +59,22 @@
 
   <!-- Call to Action Section -->
   <section class="container my-5">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      <div id="flashMessage" style="
+        position: fixed;
+        top: 0;
+        right: 0;
+        z-index: 9999;"
+        class="mt-3 mr-2 alert alert-success alert-dismissible bg-success text-white border-0 fade show"
+        role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        {{ messages[0] }}
+      </div>
+    {% endif %}
+  {% endwith %}
     <div class="card custom-bg-info border-medium" style="border-radius: 20px;">
         <div class="card-body text-center ">
             <h1 class="font-semibold custom-text-warning"> Register New Admin</h1>
@@ -77,5 +93,11 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script>
+    // Hide the flash message after 1 second
+    setTimeout(function() {
+      $('#flashMessage').fadeOut('fast');
+    }, 1000); // Adjust the timeout value as needed
+  </script>
 </body>
 </html>
