--- a/app/templates/ganti_password.html
+++ b/app/templates/ganti_password.html
@@ -50,7 +50,7 @@
 <body>
    <!-- Topbar -->
    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand d-flex " href="#">
+    <a class="navbar-brand d-flex " href="/">
         <h3 class="custom-text-info font-semibold">Eye</h3><p class="custom-text-warning font-semibold">kids</p>
     </a>
     <div></div>
@@ -58,23 +58,56 @@
   </nav>
 
   <!-- Call to Action Section -->
-  <section class="container my-5" style="background-image: url(static/icon/Ellipse.svg);">
+  <section class="container my-5" >
     <div class="card border-medium" style="border-radius: 20px;">
         <div class="card-body text-center ">
-            <h1 class="font-semibold custom-text-warning"> Login Admin</h1>
+            <h1 class="font-semibold custom-text-warning">Ganti Password</h1>
             <form class="form text-center" id="form-now">
-                <input class="btn bg-white mt-3 mb-3 text-center col-md-6 font-semibold font-regular" type="text" name="username" id="username"><br>
-                <input class="btn bg-white mt-3 mb-3 text-center col-md-6 font-semibold font-regular" type="password" name="password"><br>
-                <button onclick="" class="col-md-6 mt-3 mb-3 btn btn-custom custom-bg-warning text-white">
-                <h4 class="font-semibold" style="margin-bottom: 0px;">Login</h4>
+                <input class="btn bg-white mt-3 mb-3 text-center col-md-6 font-semibold font-regular" type="password" id="password_lama" name="password" placeholder="password lama"><br>
+                <input class="btn bg-white mt-3 mb-3 text-center col-md-6 font-semibold font-regular" type="password" id="password_baru" name="password" placeholder="password baru"><br>
+                <button id="submit" type="button" class="col-md-6 mt-3 mb-3 btn btn-custom custom-bg-warning text-white">
+                <h4 class="font-semibold" style="margin-bottom: 0px;">Submit</h4>
                 </button>
             </form>
         </div>
     </div>
   </section>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script>
+     function kirim(){
+        $.ajax({
+            url: '/ganti_password',
+            method: 'POST',
+            contentType: 'application/json',
+            data: JSON.stringify({
+                password_lama:document.getElementById("password_lama").value,
+                password_baru:document.getElementById("password_baru").value
+            }),
+            success: function(response) {
+                // Proses respons dari server
+                console.log(response);
+                if (response.msg="SUKSES"){
+                  var role = "{{ session['role'] }}"
+                  if(role === "user"){
+                    window.location.href = '/user/dashboard'
+
+                  }
+                  else{
+                    window.location.href = '/admin/dashboard'
+
+                  }
+                }
+                else{
+                  alert(response.msg)
+                }
+                
+            }
+        });
+    }
+    document.getElementById("submit").addEventListener("click", kirim);</script>
+  </script>
 </body>
 </html>
