--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -27,16 +27,15 @@
       position: fixed;
       top: 65px;
       left: 0;
-      width: 250px; 
+      width: 250px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       background-color: #f8f9fa;
-      border-right: 2px solid #ddd; 
+      border-right: 2px solid #ddd;
       transition: transform 0.3s ease;
-      padding: 20px; /* Tambahkan padding untuk memberikan ruang di dalam sidebar */
+      padding: 20px;
     }
-
     .sidebar .content {
       flex-grow: 1;
     }
@@ -48,41 +47,41 @@
     }
     .sidebar .nav-link:hover {
       background-color: #e9ecef;
-    }  
+    }
     .sidebar .social-icons {
       height: 100px;
-      margin-top: auto; /* Mengatur ikon-ikon sosial untuk muncul di bagian paling bawah */
-      text-align: center; /* Untuk menengahkan ikon-ikon sosial */
+      margin-top: auto;
+      text-align: center;
     }
     .content {
       margin-left: 250px;
       padding: 20px;
       transition: margin-left 0.3s ease;
     }
-    .width-mobile{
-        width: 100%;
+    .width-mobile {
+      width: 100%;
     }
-    .width-desktop{
-        width: calc(100% - 250px);
+    .width-desktop {
+      width: calc(100% - 250px);
     }
     .content.collapsed {
       margin-left: 0;
       width: 100%;
     }
     .btn-custom {
-        border-radius: 60px;
+      border-radius: 60px;
     }
     .custom-bg-info {
-        background-color: #1F4590;
+      background-color: #1F4590;
     }
     .custom-text-info {
-        color: #1F4590;
+      color: #1F4590;
     }
     .custom-bg-warning {
-        background-color: #FFA451;
+      background-color: #FFA451;
     }
     .custom-text-warning {
-        color: #FFA451;
+      color: #FFA451;
     }
     .font-bold {
       font-weight: 700;
@@ -100,131 +99,208 @@
       align-items: baseline;
     }
     .custom-border-size {
-    height: 4px; /* Ketebalan garis diatur di sini */
-    border: none; /* Menghapus border default */
-    background-color: #1F4590;/* Warna garis */
-  }
-  .nav-link{
-    color: #ffa451 !important;;
-  }
-    .border-medium{
-        border-radius: 10px;
+      height: 4px;
+      border: none;
+      background-color: #1F4590;
     }
-    .custom-border-info{
+    .nav-link {
+      color: #ffa451 !important;
+    }
+    .border-medium {
+      border-radius: 10px;
+    }
+    .custom-border-info {
       border-color: #1F4590;
     }
   </style>
 </head>
 <body>
-       <!-- Topbar -->
-   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <!-- Topbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="d-flex baseline">
-        <a class="navbar-brand d-flex baseline" href="#">
-            <h3 class="custom-text-info font-semibold">Eye</h3><p class="custom-text-warning font-semibold">kids</p>
-        </a>
-        <!-- Toggle Button -->
-        <div class="toggle-btn">
-            <button id="sidebarToggle" class="btn btn-secondary">☰</button>
-        </div>
+      <a class="navbar-brand d-flex baseline" href="/user/dashboard">
+        <h3 class="custom-text-info font-semibold">Eye</h3>
+        <p class="custom-text-warning font-semibold">kids</p>
+      </a>
+      <!-- Toggle Button -->
+      <div class="toggle-btn">
+        <button id="sidebarToggle" class="btn btn-secondary" aria-expanded="false" aria-controls="sidebar">☰</button>
+      </div>
     </div>
-    <div></div>
-    <div></div>
   </nav>
   <!-- Sidebar -->
-  <nav class="sidebar bg-light p-2" >
+  <nav class="sidebar bg-light p-2" id="sidebar" aria-labelledby="sidebarToggle">
     <div class="text-center">
-    <img src="../static/icon/profile_default.svg" alt="icon_profile_Default">
-    <p class="font-semibold custom-text-warning">Nama</p>
-    <hr class=" custom-bg-info custom-border-size btn-custom" >
+      <img src="../static/icon/profile_default.svg" alt="icon_profile_Default">
+      <p class="font-semibold custom-text-warning">Nama</p>
+      <hr class="custom-bg-info custom-border-size btn-custom">
     </div>
     <ul class="nav flex-column text-start pl-3">
       <li class="nav-item">
-        <a class="nav-link " href="/user/dashboard"><img src="../static/icon/jadwal.svg" height="25" width="25" alt="icon_dashboard">  Dashboard</a>
+        <a class="nav-link" href="/user/dashboard"><img src="../static/icon/jadwal.svg" height="25" width="25" alt="icon_dashboard">  Dashboard</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="/user/profile"><img src="../static/icon/icon_profile.svg" height="25" width="25" alt="icon_username">  Profile</a>
+        <a class="nav-link" href="/user/profile"><img src="../static/icon/icon_profile.svg" height="25" width="25" alt="icon_username">  Profile</a>
       </li>
     </ul>
     <div>
-    <hr class=" custom-bg-info custom-border-size btn-custom" >
+      <hr class="custom-bg-info custom-border-size btn-custom">
     </div>
     <ul class="nav flex-column text-start pl-3">
       <li class="nav-item">
-        <a class="nav-link " href="/ganti_password"><img src="../static/icon/ganti_password.svg" height="25" width="25" alt="icon_ganti_password">  Ganti Password</a>
+        <a class="nav-link" href="/ganti_password"><img src="../static/icon/ganti_password.svg" height="25" width="25" alt="icon_ganti_password">  Ganti Password</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="/keluar"><img src="../static/icon/logout.svg" height="25" width="25" alt="icon_keluar">  Keluar</a>
+        <a class="nav-link" href="/keluar"><img src="../static/icon/logout.svg" height="25" width="25" alt="icon_keluar">  Keluar</a>
       </li>
     </ul>
     <div>
-    <hr class=" custom-bg-info custom-border-size btn-custom" >
+      <hr class="custom-bg-info custom-border-size btn-custom">
     </div>
     <div class="text-center social-icons">
-        <a href=""class="mr-3"><img src="../static/icon/twitter.svg" height="25" width="25" alt=""></a> 
-        <a href=""class="mr-3"><img src="../static/icon/instagram.svg" height="25" width="25" alt=""></a>
-        <a href=""><img src="../static/icon/whatsapp.svg" height="25" width="25" alt=""></a>
+      <a href="" class="mr-3"><img src="../static/icon/twitter.svg" height="25" width="25" alt="Twitter"></a>
+      <a href="" class="mr-3"><img src="../static/icon/instagram.svg" height="25" width="25" alt="Instagram"></a>
+      <a href=""><img src="../static/icon/whatsapp.svg" height="25" width="25" alt="WhatsApp"></a>
     </div>
   </nav>
 
   <!-- Content -->
   <div class="content" id="mainContent">
-  <!-- Call to Action Section -->
-  <section class="container my-5">
-    <div class="card" style="border:0px" >
-        <div class="card-body align-center">
-            <h1 class="font-semibold text-center custom-text-warning">Profile</h1>
-            <form class="col-md-12" id="form-now">
-                <label for="username" class="custom-text-warning font-semibold "><img src="../static/icon/username.svg" alt="icon_username"> Nama</label><br>
-                <input class="btn bg-white mb-3 font-semibold font-regular form-control custom-border-info " type="text" name="username" id="username"><br>
-                <label for="email" class="mt-3 custom-text-warning font-semibold"><img src="../static/icon/email.svg" alt="icon_email"> Email</label><br>
-                <input class="btn bg-white mb-3 font-semibold font-regular form-control custom-border-info" type="email" name="email"><br>
-                <label for="nm_anak" class=" mt-3 custom-text-warning font-semibold"><img src="../static/icon/boneka.svg" alt="icon_nm_anak"> Nama Anak</label><br>
-                <input class="btn bg-white mb-3 font-semibold font-regular form-control custom-border-info" type="text" name="nm_anak" id="nm_anak"><br>
-                <label for="usia_anak" class=" mt-3 custom-text-warning font-semibold"><img src="../static/icon/boneka.svg" alt="icon_usia_anak"> Usia Anak</label><br>
-                <input class="btn bg-white mb-3 font-semibold font-regular form-control custom-border-info" type="number" name="usia_anak" id="usia_anak"><br>
-                <label for="no_hp" class=" mt-3 custom-text-warning font-semibold"><img src="../static/icon/no_hp.svg" alt="icon_no_hp"> No Handphone</label><br>
-                <input class="btn bg-white mb-3 font-semibold font-regular form-control custom-border-info" type="number" name="no_hp" id="no_hp"><br>
-                <div class="align-center text-center">
-                  <button onclick="" class="col-md-6 align-center mt-3 mb-3 btn btn-custom custom-bg-info text-white">
-                  <h4 class="font-semibold" style="margin-bottom: 0px;">Simpan</h4>
-                  </button>
-                </div>
-            </form>
+    <!-- Call to Action Section -->
+    <section class="container my-5">
+      {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <div id="flashMessage" style="
+          position: fixed;
+          top: 0;
+          right: 0;
+          z-index: 9999;"
+          class="mt-3 mr-2 alert alert-success alert-dismissible bg-success text-white border-0 fade show"
+          role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          {{ messages[0] }}
         </div>
-    </div>
-  </section>
-  
+      {% endif %}
+    {% endwith %}
+    
+      <div class="card" style="border: 0;">
+        <div class="card-body">
+          <h1 class="font-semibold text-center custom-text-warning">Profile</h1>
+          <form class="col-md-12" id="form-now">
+            <div class="form-group">
+                <label for="username" class="custom-text-warning font-semibold">
+                    <img src="../static/icon/username.svg" alt="icon_username"> Nama
+                </label>
+                <input class="btn bg-white mb-3 font-semibold font-regular form-control custom-border-info" type="text" name="username" id="username" value="{{ session['username'] }}">
+            </div>
+            <div class="form-group">
+                <label for="email" class="custom-text-warning font-semibold">
+                    <img src="../static/icon/email.svg" alt="icon_email"> Email
+                </label>
+                <input class="btn bg-white mb-3 font-semibold font-regular form-control custom-border-info" type="email" name="email" id="email" value="{{ session['email'] }}">
+            </div>
+            <div class="form-group">
+                <label for="nm_anak" class="custom-text-warning font-semibold">
+                    <img src="../static/icon/boneka.svg" alt="icon_nm_anak"> Nama Anak
+                </label>
+                <input class="btn bg-white mb-3 font-semibold font-regular form-control custom-border-info" type="text" name="nm_anak" id="nm_anak" value="{{ session['nama_anak'] }}">
+            </div>
+            <div class="form-group">
+                <label for="usia_anak" class="custom-text-warning font-semibold">
+                    <img src="../static/icon/boneka.svg" alt="icon_usia_anak"> Usia Anak
+                </label>
+                <input class="btn bg-white mb-3 font-semibold font-regular form-control custom-border-info" type="number" name="usia_anak" id="usia_anak" value="{{ session['usia_anak'] }}">
+            </div>
+            <div class="form-group">
+                <label for="no_hp" class="custom-text-warning font-semibold">
+                    <img src="../static/icon/no_hp.svg" alt="icon_no_hp"> No Handphone
+                </label>
+                <input class="btn bg-white mb-3 font-semibold font-regular form-control custom-border-info" type="number" name="no_hp" id="no_hp" value="{{ session['phone_number'] }}">
+            </div>
+            <div class="text-center">
+                <button type="button" onclick="updateProfile()" class="col-md-6 btn btn-custom custom-bg-info text-white">
+                    <h4 class="font-semibold" style="margin-bottom: 0;">Simpan</h4>
+                </button>
+            </div>
+        </form>
+        
+        </div>
+      </div>
+    </section>
+  </div>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script>
     $(document).ready(function () {
-    function adjustContentStyle() {
+      function adjustContentStyle() {
         const content = $('.content');
-      const sidebar = document.querySelector('.sidebar');
-      const sidebarWidth = 250; // Width of the sidebar in pixels
+        const sidebarWidth = 250; // Width of the sidebar in pixels
 
-      if ($(window).width() >= 500) {
-        // Desktop view
-      content.addClass('width-desktop').removeClass('width-mobile');
-      }else {
-        // Mobile view
-      content.addClass('width-mobile').removeClass('width-desktop');
+        if ($(window).width() >= 500) {
+          // Desktop view
+          content.addClass('width-desktop').removeClass('width-mobile');
+        } else {
+          // Mobile view
+          content.addClass('width-mobile').removeClass('width-desktop');
+        }
       }
-    }
 
-    // Adjust styles on page load
+      // Adjust styles on page load
+      adjustContentStyle();
 
-    adjustContentStyle();
-    // Adjust styles on window resize
-    window.addEventListener('resize', adjustContentStyle);
+      // Adjust styles on window resize
+      $(window).resize(adjustContentStyle);
+
       $('#sidebarToggle').on('click', function () {
         $('.sidebar').toggleClass('collapsed');
         $('#mainContent').toggleClass('collapsed');
         adjustContentStyle();
       });
     });
-</script>
+      function updateProfile() {
+          // Ambil nilai dari form
+          var username = $('#username').val();
+          var email = $('#email').val();
+          var nm_anak = $('#nm_anak').val();
+          var usia_anak = $('#usia_anak').val();
+          var no_hp = $('#no_hp').val();
+  
+          // Kirim data menggunakan AJAX
+          $.ajax({
+              type: 'POST',
+              url: '/user/update_profile',  // Ganti dengan URL endpoint Anda
+              data: {
+                  full_name: username,
+                  email: email,
+                  nama_anak: nm_anak,
+                  usia_anak: usia_anak,
+                  phone_number: no_hp
+              },
+              success: function(response) {
+                  // Tampilkan pesan sukses atau lakukan tindakan lain setelah sukses
+                  alert(response.msg);
+                  if(response.msg==="Profil berhasil diperbarui"){
+                    document.location.href="/user/dashboard";
+                  }
+                  // Contoh: redirect atau tindakan lainnya
+                  // window.location.href = '/profile'; // Contoh redirect ke halaman profil
+              },
+              error: function(error) {
+                  // Tampilkan pesan error atau lakukan tindakan lain jika ada error
+                  alert("terjadi kesalahan");
+              }
+          });
+      }
+  </script>
+      <script>
+        // Hide the flash message after 1 second
+        setTimeout(function() {
+          $('#flashMessage').fadeOut('fast');
+        }, 1000); // Adjust the timeout value as needed
+      </script>
 </body>
 </html>
-
